Deployment-files/platformservice-deployment-pn-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformservice-np-service
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
