Deployment-files/platformservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: 146353676/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platformsservice-clusterip-service
spec:
  type: ClusterIP
  selector: 
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
    - name: platformservicegrpc
      protocol: TCP
      port: 666
      targetPort: 666
