Deployment-files/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.9-management
          ports:
            - containerPort: 15672
              name: rbmq-mngm-port
            - containerPort: 5672
              name: rbmq-msgs-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clust  erip-service
spec:
  type: ClusterIP
  selector: 
    app: rabbitmq
  ports:
    - name: rbmq-mngm-port
      protocol: TCP
      port: 15672
      targetPort: 15672 
    - name: rbmq-msgs-port
      protocol: TCP
      port: 5672
      targetPort: 5672 
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector: 
    app: rabbitmq
  ports:
    - name: rbmq-mngm-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rbmq-msgs-port
      protocol: TCP
      port: 5672
      targetPort: 5672
