Deployment-files/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: platformsservice-clusterip-service
                port:
                  number: 80
          - path: /api/c
            pathType: Prefix
            backend:
              service:
                name: commandsservice-clusterip-service
                port:
                  number: 80
